# ndm

./: Makefile  README.md  pyproject.toml  requirements.txt
ndm/: __main__.py  main.py
ndm/templates/: pyproject.toml.template
